# nbody-entropy

./: Cargo.toml  README.md  THERMODYNAMIC_COMPUTING.md
src/: benchmark.rs  expr.rs  gpu_svgd.rs  gpu_svgd_viz.rs  lib.rs  thermodynamic.rs  viz.rs
src/loss_functions/: iris.wgsl  iris_grad.wgsl  mnist_pca.wgsl  mnist_pca_grad.wgsl  timeseries.wgsl  timeseries_grad.wgsl  wine.wgsl  wine_grad.wgsl
src/shaders/: svgd.wgsl  thermodynamic.wgsl
src/thermodynamic/: types.rs
src/viz/: landscapes.rs
