[package]
name = "nbody-entropy"
version = "0.1.0"
edition = "2024"
description = "GPU-accelerated entropy extraction from N-body particle simulation"
license = "MIT"
default-run = "nbody-entropy"

[features]
default = ["gpu"]
gpu = ["wgpu", "bytemuck", "pollster"]
viz = ["iced"]

[dependencies]
rand_core = "0.9"
getrandom = "0.3"

# GPU acceleration (optional)
wgpu = { version = "27", optional = true }
bytemuck = { version = "1", features = ["derive"], optional = true }
pollster = { version = "0.4", optional = true }

# Visualization (optional)
iced = { version = "0.14.0", features = ["canvas", "tokio"], optional = true }

[[bin]]
name = "nbody-viz"
path = "src/viz.rs"
required-features = ["viz"]

[[bin]]
name = "gpu-svgd-viz"
path = "src/gpu_svgd_viz.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "benchmark"
path = "src/benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "thermodynamic-viz"
path = "src/thermodynamic_viz.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "thermodynamic-benchmark"
path = "src/thermodynamic_benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "annealing-demo"
path = "src/annealing_demo.rs"
required-features = ["viz", "gpu"]

[[bin]]
name = "thermodynamic-stream"
path = "src/thermodynamic_stream.rs"
required-features = ["gpu"]

[[bin]]
name = "thermodynamic-8d"
path = "src/thermodynamic_8d.rs"
required-features = ["gpu"]

[[bin]]
name = "classic-benchmark"
path = "src/classic_benchmark.rs"
required-features = ["gpu"]

[[bin]]
name = "nn-benchmark"
path = "src/nn_benchmark.rs"
required-features = ["gpu"]
